--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -26,8 +26,6 @@
                     knowledge management, enhancing access and functionality while maintaining stringent data security
                     measures.
                 </p>
-                <p> <a href="https://lyoh001.com/mlcenitex"><b>View Demo</b></a>
-                </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
@@ -67,8 +65,8 @@
                     to showcase the chatbot functionality. Uploaded the trained model to the Hugging Face Hub for later
                     consumption.
                 </p>
-                <p> <a href="https://github.com/lyoh001/DLFalcon"><b>View
-                            GitHub</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
+                <p>
+                    <a href="https://github.com/lyoh001/DLFalcon"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -115,10 +113,7 @@
                     for disaster response generation.
                 </p>
                 <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mldisastertweets"><b>View
-                            Demo</b></a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mldisastertweets/notebook/notebook_distilbert.ipynb"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -158,9 +153,7 @@
                     effortlessly generate unique images through prompt inputs.
                 </p>
                 <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlstablediffusion/notebook/notebook.ipynb"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -190,8 +183,7 @@
                 </p>
                 <p>
                     <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -229,9 +221,7 @@
                     enabling efficient diagnosis of Covid infections by doctors.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/DLCovid19"><b>View
-                            GitHub</b></a>, <a href="https://lyoh001.com/mlcovid"><b>View
-                            Demo</b></a>
+                    <a href="https://github.com/lyoh001/DLCovid19"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -269,8 +259,7 @@
                     performance.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mltelecom"><b>View Demo</b></a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -309,9 +298,7 @@
                     for both the mother and baby.
                 </p>
                 <p>
-                    <a
-                        href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
-                            Notebook</b></a>, <a href="https://lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
+                    <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View GitHub</b>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
