--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -26,8 +26,8 @@
                     to showcase the chatbot functionality. Uploaded the trained model to the Hugging Face Hub for later
                     consumption.
                 </p>
-                <p> <a href="https://github.com/lyoh001/DLFalcon"><b>View
-                            GitHub</b></a>, <a href="https://lyoh001.com/mlgpt2"><b>View Demo</b></a>
+                <p>
+                    <a href="https://github.com/lyoh001/DLFalcon"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -74,8 +74,7 @@
                     Scikit Learn, Pandas, NumPy, Matplotlib, and Seaborn, saving over $500k per year.
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View
-                            GitHub</b></a>, <a href="https://lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View GitHub</b></a>
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
