--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -16,6 +16,45 @@
     <main>
         <article id="mainRight">
             <section>
+                <h3><b>LLM: Enhancing Knowledge Base Bots with Fine-Tuned LLM, Retrieval Augmentation, and AI Agent
+                        Integration</b></h3>
+                <p>
+                    Leading an innovative project utilizing "Llama-3 70B" to develop a specialized company knowledge
+                    base bot. The project focuses on addressing parametric knowledge limitations, fine-tuning with
+                    proprietary data, enabling semantic retrieval, and integrating an AI agent for web and data access.
+                    This initiative represents a significant advancement in large language models for specialized
+                    knowledge management, enhancing access and functionality while maintaining stringent data security
+                    measures.
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/docker-161B22?logo=docker" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/vscode-161B22?logo=visualstudiocode"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pytorch-161B22?logo=pytorch" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/spacy-161B22?logo=spacy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/twitter-161B22?logo=twitter" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/aws-161B22?logo=amazonaws" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github_actions-161B22?logo=githubactions"
+                            alt="" /></a>
+                </p>
+                <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
+                    <iframe src="https://www.youtube.com/embed/ypiDyAuOo-k?start=0" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                </p>
+            </section>
+            <section>
                 <h3><b>AI Chatbot powered by a Large Language Model</b></h3>
                 <p>
                     Created a chatbot that responds to user queries using natural language. Used a state-of-the-art
