--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -19,7 +19,7 @@
                 <h3><b>LLM: Enhancing Knowledge Base Bots with Fine-Tuned LLM, Retrieval Augmentation, and AI Agent
                         Integration</b></h3>
                 <p>
-                    Leading an innovative project utilizing "Llama-2 70B" to develop a specialized company knowledge
+                    Leading an innovative project utilizing "Llama-3 70B" to develop a specialized company knowledge
                     base bot. The project focuses on addressing parametric knowledge limitations, fine-tuning with
                     proprietary data, enabling semantic retrieval, and integrating an AI agent for web and data access.
                     This initiative represents a significant advancement in large language models for specialized
@@ -48,7 +48,7 @@
                             alt="" /></a>
                 </p>
                 <p style="position: relative; width: 80%; padding-bottom: 45%; margin: 0 auto;">
-                    <iframe src="https://www.youtube.com/embed/n7iDGMlTXSQ?start=0" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/ypiDyAuOo-k?start=0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
